--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>I can push to github</h1>
     <h2>i can code now</h2>
     <h3>New code change</h3>
+    <p>life is going to my ruls</p>
 </body>
 </html>
